# Leet

./: CMakeLists.txt  README.md
.github/workflows/: execute_tests.yml
cmake/: leet.pc.in
include/: array.h  binary.h  config.h  leet.h
src/: array.cpp  binary.cpp  leet.cpp
tests/: CMakeLists.txt  test_array.cpp  test_binary.cpp  test_greeting.cpp
